spec/.test/config/invalid/not_array/tags.php
<?php

return [
    'parameters' => [],
    'aliases' => [],
    'factories' => [],
    'extensions' => [],
    'tags' => 1,
];
